lista de upload

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,6 @@
     inset 0px 1px 0px rgba(255, 255, 255, 0.02),
     inset 0px 0px 0px 1px rgba(255, 255, 255, 0.02);
   --opacity-2: 0.02;
-
-  /* opacity: {
-    2: var(--opacity-2);
-  } */
+   --text-xxs: 0.625rem; 
+  
 }
